[gd_scene load_steps=2 format=3 uid="uid://cebh87bpytqgo"]

[ext_resource type="Script" path="res://Scripts/Options.gd" id="1_o8iic"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o8iic")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MasterLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Master Volume"

[node name="MasterSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.001

[node name="Control" type="Control" parent="VBoxContainer"]
layout_mode = 2

[node name="MusicLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Music Volume"

[node name="MusicSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.001

[node name="Control2" type="Control" parent="VBoxContainer"]
layout_mode = 2

[node name="VoicesLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Voices Volume"

[node name="VoicesSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.001

[node name="Control3" type="Control" parent="VBoxContainer"]
layout_mode = 2

[node name="Sensativity Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Sensativity
"

[node name="SensativitySlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
min_value = 0.001
max_value = 0.005
step = 0.001
value = 0.001

[node name="Control4" type="Control" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -86.0
offset_top = -209.0
offset_right = 4.0
offset_bottom = -178.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(2, 2)

[node name="Back" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Back"

[node name="Play" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Play"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="value_changed" from="VBoxContainer/MasterSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/VoicesSlider" to="." method="_on_voices_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/SensativitySlider" to="." method="_on_sensativity_slider_value_changed"]
[connection signal="pressed" from="HBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="HBoxContainer/Play" to="." method="_on_play_pressed"]
